# ranim

./: .gitignore  Cargo.toml  README.md
ranim-render/: Cargo.toml
ranim-render/benches/: video_export_benchmark.rs
ranim-render/src/: args.rs  buf.rs  camera.rs  canvas.rs  data.rs  lib.rs  main.rs  output.rs  renderer.rs  shader.wgsl  util.rs  video.rs
ranim-render/src/data/: buffer.rs  types.rs
ranim-render/src/output/: image.rs  video.rs
ranim-render/src/shaders/: yuv420.wgsl
ranim-render/src/video/: util.rs
src/: lib.rs  prelude.rs  scene.rs
src/anim/: creation.rs  mod.rs
src/mobj/: mod.rs  polygon.rs
src/mobj/geometry/: mod.rs
