[package]
name = "ranim-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.9", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.9"
image = "0.24.2"
log = "0.4"
openh264 = "0.2"
pollster = "0.2"
ranim = { path = ".." }
wgpu = "0.12"
winit = "0.26"
winit_input_helper = "0.12"
