[package]
name = "ranim-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.9", features = ["derive"] }
clap = { version = "3.1", features = ["derive"] }
color-eyre = "0.6"
cstr = "0.2"
enum_dispatch = "0.3.8"
env_logger = "0.9"
glam = "0.20.5"
image = "0.24"
log = "0.4"
pollster = "0.2"
ranim = { path = ".." }
rsmpeg = "0.8"
wgpu = "0.12"
winit = "0.26"
winit_input_helper = "0.12"

[features]
